Bug 1184292 - Remove some Wakelock warning messages when unlocking. r=smaug CLOSED TREE