dom/media/omx/AudioOffloadPlayer.cpp
@@ -745,7 +745,6 @@ void AudioOffloadPlayer::WakeLockRelease()
   if (mWakeLock) {
     ErrorResult rv;
     mWakeLock->Unlock(rv);
-    NS_WARN_IF_FALSE(!rv.Failed(), "Failed to unlock the wakelock.");
     mWakeLock = nullptr;
   }
 }
